# CEGUI

./: .gitignore  CEGUI.sln  CEGUI_static.sln  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  vcpkg_install_32.bat  vcpkg_install_32_static.bat  vcpkg_install_64.bat  vcpkg_install_64_static.bat  vcpkg_install_all.bat  vcpkg_install_all_64.bat  vcpkg_install_all_static.bat  vcpkg_install_base.bat  vcpkg_install_base_static.bat  vcpkg_install_devil.bat  vcpkg_install_devil_static.bat  vcpkg_install_directx10.bat  vcpkg_install_directx10_static.bat  vcpkg_install_directx11.bat  vcpkg_install_directx11_static.bat  vcpkg_install_expat.bat  vcpkg_install_expat_static.bat  vcpkg_install_freeimage.bat  vcpkg_install_freeimage_static.bat  vcpkg_install_opengl.bat  vcpkg_install_opengl_static.bat  vcpkg_install_rapidxml.bat  vcpkg_install_rapidxml_static.bat  vcpkg_install_stb.bat  vcpkg_install_stb_static.bat  vcpkg_install_tinyxml.bat  vcpkg_install_tinyxml_static.bat  vcpkg_install_xerces.bat  vcpkg_install_xerces_static.bat
.github/: copilot-instructions.md
CEGUIBase/: CEGUIBase.vcxproj  CEGUIBase.vcxproj.filters  CEGUIBase_static.vcxproj  CEGUIBase_static.vcxproj.filters
CEGUICommonDialogs/: CEGUICommonDialogs.vcxproj  CEGUICommonDialogs.vcxproj.filters  CEGUICommonDialogs_static.vcxproj  cpp.hint
CEGUICoreWindowRendererSet/: CEGUICoreWindowRendererSet.vcxproj  CEGUICoreWindowRendererSet.vcxproj.filters  CEGUICoreWindowRendererSet_static.vcxproj  CEGUICoreWindowRendererSet_static.vcxproj.filters
CEGUIDevILImageCodec/: CEGUIDevILImageCodec.vcxproj  CEGUIDevILImageCodec_static.vcxproj  CEGUIDevILImageCodec_static.vcxproj.filters
CEGUIDirect3D10Renderer/: CEGUIDirect3D10Renderer.vcxproj  CEGUIDirect3D10Renderer.vcxproj.filters  CEGUIDirect3D10Renderer_static.vcxproj
CEGUIDirect3D11Renderer/: CEGUIDirect3D11Renderer.vcxproj  CEGUIDirect3D11Renderer_static.vcxproj  CEGUIDirect3D11Renderer_static.vcxproj.filters
CEGUIDirect3D9Renderer/: CEGUIDirect3D9Renderer.vcxproj  CEGUIDirect3D9Renderer.vcxproj.filters  CEGUIDirect3D9Renderer_static.vcxproj
CEGUIExpatParser/: CEGUIExpatParser.vcxproj  CEGUIExpatParser_static.vcxproj  CEGUIExpatParser_static.vcxproj.filters
CEGUIFreeImageImageCodec/: CEGUIFreeImageImageCodec.vcxproj  CEGUIFreeImageImageCodec.vcxproj.filters  CEGUIFreeImageImageCodec_static.vcxproj
CEGUILuaScriptModule/: CEGUILuaScriptModule.vcxproj  CEGUILuaScriptModule_static.vcxproj  CEGUILuaScriptModule_static.vcxproj.filters
CEGUINullRenderer/: CEGUINullRenderer.vcxproj  CEGUINullRenderer_static.vcxproj  CEGUINullRenderer_static.vcxproj.filters
CEGUIOpenGLRenderer/: CEGUIOpenGLRenderer.vcxproj  (+2 more)
src/: CMakeLists.txt
src/CEGUIBase/: CMakeLists.txt
src/CEGUIBase/CEGUI/: Affector.cpp  Animation.cpp  Base.h  Clipboard.cpp  CompositeResourceProvider.cpp  Config.h  DefaultResourceProvider.cpp  DynamicModule.cpp  EventSet.cpp  EventSet.h  Exceptions.h  GUIContext.cpp  IconvStringTranscoder.cpp  IconvStringTranscoder.h  ImageManager.cpp  InputEvent.h  Logger.cpp  MemoryAllocation.h  ModuleConfig.h  NamedXMLResourceManager.h  PCRERegexMatcher.h  PixmapFont.cpp  Property.h  PropertyHelper.h  RefCounted.h  RenderEffectFactory.h  RenderedString.cpp  RenderingSurface.cpp  Scheme.cpp  Scheme_xmlHandler.cpp  SimpleTimer.cpp  String.cpp  String.h  TplProperty.h  TplWindowFactory.h  TypedProperty.h  Win32StringTranscoder.cpp  Window.cpp  WindowFactory.h  WindowFactoryManager.cpp  (+2 more)
src/CEGUIBase/CEGUI/Falagard/: EventAction.cpp  FalagardXMLHandler.cpp  WidgetLookFeel.cpp  WidgetLookManager.cpp
src/CEGUIBase/CEGUI/Widgets/: Editbox.cpp  Editbox.h  GridLayoutContainer.cpp  MultiColumnList.cpp  RoundImage.cpp  RoundImage.h  Spinner.cpp  Tree.cpp
src/CEGUICommonDialogs/: CMakeLists.txt
src/CEGUICoreWindowRendererSet/: CMakeLists.txt
src/CEGUICoreWindowRendererSet/CEGUI/WindowRendererSets/Core/: Editbox.cpp  MultiLineEditbox.cpp  RoundImage.cpp  SlotImageItem.cpp  StaticText.cpp
src/CEGUIDevILImageCodec/: CMakeLists.txt
src/CEGUIDevILImageCodec/CEGUI/ImageCodecModules/DevIL/: ImageCodec.h
src/CEGUIDirect3D10Renderer/: CMakeLists.txt
src/CEGUIDirect3D10Renderer/CEGUI/RendererModules/Direct3D10/: GeometryBuffer.h  RenderTarget.h  Renderer.cpp  Texture.cpp  Texture.h
src/CEGUIDirect3D11Renderer/: CMakeLists.txt
src/CEGUIDirect3D11Renderer/CEGUI/RendererModules/Direct3D11/: GeometryBuffer.h  RenderTarget.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h
src/CEGUIDirect3D9Renderer/: CMakeLists.txt
src/CEGUIDirect3D9Renderer/CEGUI/RendererModules/Direct3D9/: GeometryBuffer.h  RenderTarget.h  Renderer.h  Texture.cpp  Texture.h
src/CEGUIExpatParser/: CMakeLists.txt
src/CEGUIExpatParser/CEGUI/XMLParserModules/Expat/: XMLParser.cpp  XMLParserModule.cpp
src/CEGUIFreeImageImageCodec/: CMakeLists.txt
src/CEGUIFreeImageImageCodec/CEGUI/ImageCodecModules/FreeImage/: ImageCodec.cpp  ImageCodecModule.cpp
src/CEGUILuaScriptModule/: CMakeLists.txt
src/CEGUILuaScriptModule/CEGUI/ScriptModules/Lua/: Functor.cpp  ScriptModule.cpp
src/CEGUINullRenderer/: CMakeLists.txt
src/CEGUINullRenderer/CEGUI/RendererModules/Null/: GeometryBuffer.cpp  GeometryBuffer.h  Texture.h  TextureTarget.h
src/CEGUIOpenGLRenderer/: CMakeLists.txt
src/CEGUIOpenGLRenderer/CEGUI/RendererModules/OpenGL/: ApplePBTextureTarget.cpp  GL.cpp  GL.h  GL3FBOTextureTarget.cpp  GLFBOTextureTarget.cpp  GLFBOTextureTarget.h  GLRenderer.cpp  GLXPBTextureTarget.cpp  GLXPBTextureTarget.h  GeometryBufferBase.cpp  Shader.cpp  ShaderManager.cpp  ViewportTarget.h  WGLPBTextureTarget.cpp
src/CEGUIRapidXMLParser/: CMakeLists.txt
src/CEGUISTBImageCodec/: CMakeLists.txt
src/CEGUISTBImageCodec/CEGUI/ImageCodecModules/STB/: ImageCodec.cpp  ImageCodecModule.cpp
src/CEGUITGAImageCodec/: CMakeLists.txt
src/CEGUITinyXMLParser/: CMakeLists.txt
src/CEGUITinyXMLParser/CEGUI/XMLParserModules/TinyXML/: XMLParserModule.cpp
src/CEGUIXercesParser/: CMakeLists.txt
src/CEGUIXercesParser/CEGUI/XMLParserModules/Xerces/: XMLParser.h  XMLParserModule.cpp  XMLParserProperties.h
(+126 files in other folders)
